build: run on the Java 25 LTS (#139)